# iiot_gateway

./: .gitattributes  CMakeLists.txt  README.md  app.py  test_typedef.cpp
config/: gateway_config.json
include/: DataProcessor.h  DatabaseManager.h  MqttClient.h  SnmpAgent.h  Watchdog.h
include/models/: SensorData.h
scripts/: setup_pi.sh  start_gateway.sh
src/: DataProcessor.cpp  DatabaseManager.cpp  MqttClient.cpp  SnmpAgent.cpp  Watchdog.cpp  main.cpp
static/js/: door-controller.js
templates/: index.html  login.html
